2006-09-16  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Plugins/NotificationAreaIcon/NotificationArea.cs: Support
	transparency (pulled from stable branch, BGO #356350)

	* src/Banshee.Plugins/NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	CTRL+Left click goes to previous, CTRL+Right next, middle play/pause

2006-09-16  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/ActionManager.cs: Disabled equalizer for now - it's
	not finished

2006-09-16  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Globals.cs: Make startup strings translatable

2006-09-16  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Banshee.Cdrom.Nautilus/NautilusDrive.cs (CheckMedia): 
	Added null checks on discDevice and discDevice.Parent

2006-09-16  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Gui/RatingRenderer.cs: Minor fix, do not rely on
	widget if null; cache the GC

	* src/Banshee.Base/Gui/CleanRoomStartup.cs: Dump the exception to stdout

2006-09-16  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Banshee.Base.dll.config.in: Added libnotify map

2006-09-16  Aaron Bockover  <abock@gnome.org>

	* data/banshee-dialogs.glade: Added rating; fixed mnemonics

	* src/Banshee.Base/Gui/TrackEditor.cs: Disable the cover art page for now
	as it's not going to be complete before the 0.11.0 release; implement
	rating support; added basic cover art reading, but it is disabled

	* src/Banshee.Widgets/RatingEntry.cs: Better x-pos to rating 'formula'
	that does not depend on Allocation.Width

	* src/Banshee.Base/Gui/RatingRenderer.cs: Reverted back to showing
	the dots on prelight; prelight is only set when the cursor enters the
	entire row - not on the cell or row+column, so it's buggy

	* src/Banshee.Base/DBusPlayer.cs: Added SetPlayingRating, GetMaxRating

	* src/Main.cs: Added set-rating command line option

	* src/banshee.mdp:
	* src/Banshee.Base/Banshee.Base.mdp: Updated

2006-09-16  Ruben Vermeersch  <ruben@savanne.be>
